--- a/style/nosotros.css
+++ b/style/nosotros.css
@@ -142,7 +142,17 @@ header {
 
 }
 
+/* Imagen de la empresa */
 
+.imagen-empresa {
+    width: 100%;
+    height: 14vh;
+}
+
+.imagen-empresa img {
+    width: 100%;
+    background-size: cover;
+}
 
 
 
